--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -1,26 +1,27 @@
 {
-    "Create New Account": "Create New Account",
-    "To create an account using Anchor": "To create an account using Anchor",
-    "To create an account using Anchor, please provide the following code:": "To create an account using Anchor, please provide the following code:",
-    "Account Created Successfully!": "Account Created Successfully!",
-    "Your account was created successfully. You can now use this account on the wallet that generated the private keys.": "Your account was created successfully. You can now use this account on the wallet that generated the private keys.",
-    "Enter the desired EOS account name:": "Enter the desired EOS account name:",
-    "Enter account name": "Enter account name",
-    "This account name is available.": "This account name is available.",
-    "This account name is not available.": "This account name is not available.",
-    "Checking name availability...": "Checking name availability...",
-    "Creating account...": "Creating account...",
-    "Confirm": "Confirm",
-    "Failed to check account name availability": "Failed to check account name availability",
-    "Error checking account name availability": "Error checking account name availability",
-    "Missing required keys": "Missing required keys",
-    "Account created successfully": "Account created successfully",
-    "Failed to create account": "Failed to create account",
-    "Failed to create account: {reason}": "Failed to create account: {reason}",
-    "Error creating account": "Error creating account",
-    "Error creating account: {reason}": "Error creating account: {reason}",
-    "Unknown error": "Unknown error",
-    "Sign in to get a free account": "Sign in to get a free account",
-    "Free Account Unvailable": "Free Account Unvailable",
-    "You're not eligible for a free account at this time. You can purchase an account below, or sign in with another account.": "You're not eligible for a free account at this time. You can purchase an account below, or sign in with another account."
-  }
+  "Create New Account": "Create New Account",
+  "To create an account using Anchor": "To create an account using Anchor",
+  "To create an account using Anchor, please provide the following code:": "To create an account using Anchor, please provide the following code:",
+  "Account Created Successfully!": "Account Created Successfully!",
+  "Your account was created successfully. You can now use this account on the wallet that generated the private keys.": "Your account was created successfully. You can now use this account on the wallet that generated the private keys.",
+  "Enter the desired EOS account name:": "Enter the desired EOS account name:",
+  "Enter account name": "Enter account name",
+  "This account name is available.": "This account name is available.",
+  "This account name is not available.": "This account name is not available.",
+  "Checking name availability...": "Checking name availability...",
+  "Creating account...": "Creating account...",
+  "Confirm": "Confirm",
+  "Failed to check account name availability": "Failed to check account name availability",
+  "Error checking account name availability": "Error checking account name availability",
+  "Missing required keys": "Missing required keys",
+  "Account created successfully": "Account created successfully",
+  "Failed to create account": "Failed to create account",
+  "Failed to create account: {reason}": "Failed to create account: {reason}",
+  "Error creating account": "Error creating account",
+  "Error creating account: {reason}": "Error creating account: {reason}",
+  "Unknown error": "Unknown error",
+  "Sign in to get a free account": "Sign in to get a free account",
+  "Free Account Unvailable": "Free Account Unvailable",
+  "You're not eligible for a free account at this time.": "You're not eligible for a free account at this time.",
+  "You can purchase an account below, or sign in with another account.": "You can purchase an account below, or sign in with another account."
+}
